Fix the default suru on small screens

--- a/static/sass/_pattern_strip.scss
+++ b/static/sass/_pattern_strip.scss
@@ -55,6 +55,7 @@
 
       @media (min-width: $breakpoint-medium) {
         $padding: 6rem;
+        background-image: linear-gradient(-89deg, #e95420 0%, #772953 85%);
         background-position: 0% 0%, top right, right 0 bottom $padding, right bottom, 0% 0%;
         background-size: 100% calc(100% - #{$padding}), 50% 100%, 100% $padding, 100% $padding, auto;
         margin-bottom: -$padding;
